--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>boilerplate</title>
+    <title>ES6 Model manage</title>
 </head>
 <body>
-    <h2>boilerplate</h2>
-    <p>this is a boilerplate for webpack and es6 syntax</p>
+    <h2>ES6</h2>
+    <p>this is a front end ES6 Model manage</p>
+    <script src="dist/app.js"></script>
 </body>
 </html>
