--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ES6 Model manage</title>
+    <title>easy model manage</title>
 </head>
 <body>
-    <h2>ES6</h2>
-    <p>this is a front end ES6 Model manage</p>
+    <h2>em2</h2>
+    <p>this is a front end easy model manage</p>
     <script src="dist/app.js"></script>
 </body>
 </html>
