remove nested property

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
     <h2>em2</h2>
     <p>this is a front end easy model manage</p>
-    <script src="dist/app.js"></script>
+    <script src="dist/demo.js"></script>
 </body>
 </html>
